fix scrollbar to be transparent for all browsers

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,15 @@ body {
   border: 0px;
   padding: 30px;
   overflow-y: scroll;
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: transparent transparent; /* For Firefox */
+}
+.weather-app ::-webkit-scrollbar {
+  width: 6px; /* Adjust the width as needed */
+}
+
+.weather-app ::-webkit-scrollbar-thumb {
+  background-color: transparent; /* Make the scrollbar thumb transparent */
 }
 .weather-app ::-webkit-scrollbar-track {
   background-color: transparent; /* Make the scrollbar track transparent */
